--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@babel/preset-env": "^7.1.6",
     "@matthewp/haunted": "^2.2.0",
     "lit-html": "^0.13.0",
+    "pwa-helpers": "^0.9.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "rollup": "^0.67.3",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-babel-minify": "^6.2.0",
